# katalar

core/: pyproject.toml
core/core/database/: __init__.py  _util.py  repos.py
core/core/database/entities/: base.py  project.py  project_tag.py  record.py  tag.py  tagtoken.py  user.py  user_tag.py
core/core/database/entities/mixins/: datetimesmixin.py  id.py
core/core/database/patterns/: unit_of_work.py
core/core/database/patterns/repositories/: base.py  id_repository.py  pagination.py
core/core/database/types/: string_enum.py
core/core/dto/: pagination.py
